Remove login/register buttons from header, add admin notification system, fix blog specialty selection, show 3 random blogs on landing page

--- a/views/admin-blog-edit.ejs
+++ b/views/admin-blog-edit.ejs
@@ -147,8 +147,8 @@
 
                 <script>
                     (function() {
-                        const specialties = <%= JSON.stringify(specialties) %>;
-                        let selectedSpecialties = <%= post && post.specialties && Array.isArray(post.specialties) ? JSON.stringify(post.specialties.filter(s => s !== 'male' && s !== 'female')) : '[]' %>;
+                        const specialties = <%- JSON.stringify(specialties) %>;
+                        let selectedSpecialties = <%- post && post.specialties && Array.isArray(post.specialties) ? JSON.stringify(post.specialties.filter(s => s !== 'male' && s !== 'female')) : '[]' %>;
 
                         function updateSpecialtiesDisplay() {
                             const container = document.getElementById('selectedSpecialties');
