Add text-justify to blog post preview text on landing page

--- a/views/partials/blogPosts.ejs
+++ b/views/partials/blogPosts.ejs
@@ -96,7 +96,7 @@
                                 // Convert all remaining whitespace to single spaces for clean preview
                                 const previewText = truncatedText.replace(/\s+/g, ' ').trim();
                                 %>
-                                <p class="mt-5 text-sm/6 text-gray-600"><%= previewText %></p>
+                                <p class="mt-5 text-sm/6 text-gray-600 text-justify"><%= previewText %></p>
                                 
                                 <% 
                                 // Show specialty search button if there are specialties
